--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar shadow-sm fixed-top bg-white">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
         <img src="/static/bootstrap-solid.svg" width="30" height="30" alt=""> Tech Gamma
         </a>
     </div>
