added files for submitting job application

--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -38,7 +38,7 @@
                     <li>{{ line }}</li>
                 {% endfor %}
             </ol>
-
+            {% include 'application_form.html' %}
         </div>
         {% include 'footer.html' %}
     </body>
